// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/datasource/DatasourceComponent datasource with expression arguments 1`] = `
<div
  className="canvasDataSource__section"
>
  <button
    className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft canvasDataSource__triggerButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        className="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
        size="m"
      >
        
      </span>
      <span
        className="euiButtonEmpty__text"
      >
        <span
          className="canvasDataSource__triggerButtonIcon"
          data-euiicon-type="training"
        >
          
        </span>
        Test Datasource
      </span>
    </span>
  </button>
  <div
    className="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />
  <div
    className="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning css-1yqbqzs-euiPanel-none-m-warning-euiCallOut"
  >
    <div
      className="euiText css-le6wmz-euiText-s-euiTextColor-default-euiCallOut__description"
      style={Object {}}
    >
      <p>
        The datasource has an argument controlled by an expression. Use the expression editor to modify the datasource.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/datasource/DatasourceComponent simple datasource 1`] = `
<div
  className="canvasDataSource__section"
>
  <button
    className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft canvasDataSource__triggerButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        className="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
        size="m"
      >
        
      </span>
      <span
        className="euiButtonEmpty__text"
      >
        <span
          className="canvasDataSource__triggerButtonIcon"
          data-euiicon-type="training"
        >
          
        </span>
        Test Datasource
      </span>
    </span>
  </button>
  <div
    className="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />
  <div
    className="render_to_dom"
  />
  <hr
    className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium css-1y0qta5-euiHorizontalRule-full-m"
  />
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButtonEmpty__content"
        >
          <span
            className="euiButtonEmpty__text"
          >
            Preview data
          </span>
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButton euiButton--success euiButton--small euiButton--fill"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "minWidth": undefined,
          }
        }
        type="button"
      >
        <span
          className="euiButtonContent euiButton__content"
        >
          <span
            className="euiButton__text"
          >
            Save
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
